--- a/index.html
+++ b/index.html
@@ -14,37 +14,38 @@
 
     <title>Frontend Mentor | Interactive rating component</title>
     <link rel="stylesheet" href="style.css" />
+    <script defer src="script.js"></script>
   </head>
   <body>
-    <section role="main" class="card1">
+    <main class="card1">
       <section class="rating">
-        <div class="star">
+        <figure class="star">
           <svg width="17" height="16" xmlns="http://www.w3.org/2000/svg">
             <path
               d="m9.067.43 1.99 4.031c.112.228.33.386.58.422l4.45.647a.772.772 0 0 1 .427 1.316l-3.22 3.138a.773.773 0 0 0-.222.683l.76 4.431a.772.772 0 0 1-1.12.813l-3.98-2.092a.773.773 0 0 0-.718 0l-3.98 2.092a.772.772 0 0 1-1.119-.813l.76-4.431a.77.77 0 0 0-.222-.683L.233 6.846A.772.772 0 0 1 .661 5.53l4.449-.647a.772.772 0 0 0 .58-.422L7.68.43a.774.774 0 0 1 1.387 0Z"
               fill="#FC7614"
             />
           </svg>
-        </div>
+        </figure>
         <h1>How did we do?</h1>
         <p>
           Please let us know how we did with your support request. All feedback
           is appreciated to help us improve our offering!
         </p>
-        <div class="numbers">
+        <section class="numbers">
           <button class="numbers-btn one unclicked">1</button>
           <button class="numbers-btn two unclicked">2</button>
           <button class="numbers-btn three unclicked">3</button>
           <button class="numbers-btn four unclicked">4</button>
           <button class="numbers-btn five unclicked">5</button>
-        </div>
+        </section>
         <button class="submit">Submit</button>
       </section>
-    </section>
+    </main>
 
     <section class="card2 hidden">
       <section class="thank-you">
-        <div>
+        <figure class="svg">
           <svg width="162" height="108" xmlns="http://www.w3.org/2000/svg">
             <g fill="none">
               <path
@@ -134,8 +135,8 @@
               />
             </g>
           </svg>
-        </div>
-        <div class="selected">You selected out of 5</div>
+        </figure>
+        <section class="selected"></section>
         <h2>Thank you!</h2>
         <p>
           We appreciate you taking the time to give a rating. If you ever need
@@ -143,12 +144,5 @@
         </p>
       </section>
     </section>
-
-    <!-- Rating state start -->
-    <!-- Rating state end -->
-    <!-- Thank you state start -->
-    <!-- Add rating here -->
-    <!-- Thank you state end -->
   </body>
-  <script src="script.js"></script>
 </html>
